<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="Start"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="Library"
            android:text="@string/library"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="About"
            android:text="@string/about"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="225dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/image_choosing" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/checkBox5"
        android:layout_alignTop="@+id/textView"
        android:onClick="choose_image"
        android:text="@string/choose_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:text="@string/style"
        android:textColor="@color/colorPrimaryDark"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="130dp"
        android:text="@string/artwork"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="59dp"
        android:text="@string/photo"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/noise_reduction"
        android:textColor="@color/colorPrimaryDark"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/low" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginEnd="84dp"
        android:text="@string/medium"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/button"
        android:text="@string/high"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp"
        android:gravity="center"
        android:text="@string/upscaling"
        android:textColor="@color/colorPrimaryDark"/>

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/_2x" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/checkBox5"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/_4x" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/checkBox3"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/_8x" />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="convert"
        android:text="@string/convert" />

</RelativeLayout>