<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main3Activity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewA"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod15"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod16"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewC"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod17"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewD"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod18"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewE"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod11"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewF"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod12"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod13"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewH"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod14"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewI"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod7"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image"/>

            <ImageView
                android:id="@+id/imageViewJ"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod8"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewK"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod9"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewL"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod1o"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewM"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod19"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewN"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod2o"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewO"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod21"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/imageViewP"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:layout_margin="3dp"
                android:clickable="true"
                android:contentDescription="@string/tod22"
                android:focusable="true"
                android:onClick="toDisplay"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="Start"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="Library"
            android:text="@string/library"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:onClick="About"
            android:text="@string/about"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>