<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    tools:context=".DisplayActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"><Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.50"
        android:text="@string/back"
        android:onClick="Back"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0.50"
            android:visibility="gone"
            android:onClick="Download"
            android:text="@string/download" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/image"
        android:contentDescription="@string/iv_content" />

</FrameLayout>